# ASTRACATRR

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  install_docker.sh  install_host.sh
.github/workflows/: ci.yml
include/: astracat.h
lua/: example_filter.lua
src/: cache.c  hooks.c  main.c  resolver.c  utils.c
tests/: dnsperf.sh  integration.sh
